# OTUS-Task2

./: .gitignore  CMakeLists.txt  README.md  main.cpp  version.cpp  version.h.in
.github/workflows/: c-cpp.yml
ip_filter/: CMakeLists.txt  ip_filter.cpp  ip_filter.hpp
test/: CMakeLists.txt  Tests.cpp
